# JeffLiveSDK

./: README.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp  sample.c
app/src/main/java/com/jeffmony/demo/: BaseStreamingActivity.java  HardStreamingActivity.java  MainActivity.java  SoftStreamingActivity.java
app/src/main/java/com/jeffmony/demo/audiofilter/: PcmBgmAudioFilter.java  SetVolumeAudioFilter.java
app/src/main/java/com/jeffmony/demo/hardfilter/: Base3x3SamplingHardVideoFilter.java  ColorMixHardFilter.java  DifferenceBlendFilterHard.java  FishEyeFilterHard.java  GaussianBlurHardFilter.java  IconHardFilter.java  SeaScapeFilter.java  SkinBlurHardVideoFilter.java  SobelEdgeDetectionHardVideoFilter.java  TextHardFilter.java  TimeStampHardFilter.java  TowInputFilterHard.java  ViewHardFilter.java  WhiteningHardVideoFilter.java
app/src/main/java/com/jeffmony/demo/softfilter/: AnimationFilterSoft.java  BlackWhiteFilterSoft.java  BlurFilterSoft.java  DoNothingFilterSoft.java  FixYFilterSoft.java  GrayFilterSoft.java  IconFilterSoft.java  SkinBlurFilterSoft.java
app/src/main/java/com/jeffmony/demo/ui/: AlwaysMarqueeTextView.java  AspectTextureView.java  FakeView.java
app/src/main/java/com/jeffmony/livesdk/: MainActivity.java
app/src/main/res/layout/: activity_main.xml  activity_streaming.xml
app/src/main/res/layout-port/: activity_streaming.xml
app/src/main/res/values/: strings.xml  styles.xml
app/src/main/rs/: skinblur.rs
gradle/wrapper/: gradle-wrapper.properties
livesdk/: build.gradle
livesdk/src/main/: AndroidManifest.xml
livesdk/src/main/cpp/: CMakeLists.txt  libresrtmp.c  libresrtmp.h  log.h  restreaming.c
livesdk/src/main/java/com/jeffmony/livesdk/client/: CallbackDelivery.java  Constants.java  RESAudioClient.java  RESClient.java  RESVideoClient.java
livesdk/src/main/java/com/jeffmony/livesdk/core/: AudioSenderThread.java  CameraHelper.java  ColorHelper.java  GLHelper.java  MediaCodecHelper.java  Packager.java  RESVideoCore.java  (+6 more)
(+29 files in other folders)
